syntax = "proto3";
package kr.co.pallete.api.v1.member;

import "google/api/annotations.proto";
import "google/protobuf/wrappers.proto";
import "v1/member/member.proto";

option java_multiple_files = true;
option java_package = "kr.co.pallete.api.v1.member";
option java_outer_classname = "MemberServiceProtos";

service MemberService {
  rpc GetMember (GetMemberRequest) returns (GetMemberResponse) {
    option (google.api.http) = {
      get: "/api/v1/members"
    };
  }
}

message GetMemberRequest {
  string id = 1;
}

message GetMemberResponse {
  Member member = 1;
}
